# DSP-Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: DFT.h  Fourier.h  Globals.h  Helpers.h  Signals.h  Statistics.h  Transformations.h  globals.h  unity_config.h
src/: CMakeLists.txt  DFT.c  Fourier.c  Helpers.c  Signals.c  Statistics.c  Transformations.c
submodules/: CMakeLists.txt
test/: CMakeLists.txt  Test_Signals.h  test_helpers.h  testfunctions.c
test/DFT/: CMakeLists.txt  Test_DFT.c
test/Fourier/: CMakeLists.txt  Test_Fourier.c
test/Signals/: CMakeLists.txt  Test_Signals.c
test/Statistics/: CMakeLists.txt  Test_Statistics.c
tools/: DSPPG_Plot.py
